--- a/example_dash.ipynb
+++ b/example_dash.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -35,23 +35,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dslib.plots import plot\n",
     "import dash_bootstrap_components as dbc\n",
     "import plotly.express as px\n",
     "\n",
     "from jupyter_dash import JupyterDash\n",
     "from dash import html, dcc, Input, Output\n",
+    "from flask import request\n",
+    "from dslib.plots import plot\n",
     "\n",
     "data = px.data.iris()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,43 +64,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "app.layout = dbc.Container([\n",
-    "  html.H1('Interactive Histogram'),\n",
-    "  html.H5('Select Column:'),\n",
-    "  dbc.Select(\n",
-    "    id='demo-dropdown',\n",
-    "    options=list(map(lambda v: { 'label': v}, data.columns)), \n",
-    "    value=data.columns[0]\n",
-    "  ),\n",
-    "  html.H5('Altair:'),\n",
-    "  html.Iframe(\n",
-    "    id='plot-iframe',\n",
-    "    style={'width':'100%', 'height': '500px'}\n",
-    "  ),\n",
-    "  html.H5('Plotly:'),\n",
-    "  dcc.Graph(id='plot-area'),\n",
-    "  html.Div(id='dd-output-container')\n",
-    "])\n",
+    "def layout():\n",
+    "    return dbc.Container([\n",
+    "        html.H1('Interactive Histogram!!'),\n",
+    "        html.H5('Select Column:'),\n",
+    "        dbc.Select(\n",
+    "            id='demo-dropdown',\n",
+    "            options=list(map(lambda v: {'label': v}, data.columns)),\n",
+    "            value=data.columns[0]\n",
+    "        ),\n",
+    "        html.Br(),\n",
+    "        html.H5('Altair:'),\n",
+    "        html.Iframe(\n",
+    "            id='plot-iframe',\n",
+    "            style={'width': '100%', 'height': '500px'}\n",
+    "        ),\n",
+    "        html.H5('Plotly:'),\n",
+    "        dcc.Graph(id='plot-area'),\n",
+    "        html.Div(id='dd-output-container')\n",
+    "    ])\n",
     "\n",
     "\n",
-    "@app.callback(\n",
-    "    Output('plot-area', 'figure'),\n",
-    "    Input('demo-dropdown', 'value')\n",
-    ")\n",
-    "def update_output(value):\n",
-    "  return px.histogram(data, x=value, text_auto=True)\n",
-    "\n",
-    "@app.callback(\n",
-    "    Output('plot-iframe', 'srcDoc'),\n",
-    "    Input('demo-dropdown', 'value')\n",
-    ")\n",
-    "def update_output(value):\n",
-    "  return plot().histogram(data, value).to_html()\n",
-    "  # return f'You have selected {value}'\n"
+    "app.layout = layout\n"
    ]
   },
   {
@@ -108,39 +98,39 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\PICHAU\\AppData\\Roaming\\Python\\Python39\\site-packages\\jupyter_dash\\jupyter_app.py:139: UserWarning:\n",
-      "\n",
-      "The 'environ['werkzeug.server.shutdown']' function is deprecated and will be removed in Werkzeug 2.1.\n",
-      "\n"
+      "Dash app running on http://127.0.0.1:9009/\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:9009/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2ecdf1d64c0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "app.run_server(mode='inline', port=9009);"
+    "@app.callback(\n",
+    "    Output('plot-area', 'figure'),\n",
+    "    Input('demo-dropdown', 'value')\n",
+    ")\n",
+    "def update_output(value):\n",
+    "    return px.histogram(data, x=value, text_auto=True, nbins=30)\n",
+    "\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output('plot-iframe', 'srcDoc'),\n",
+    "    Input('demo-dropdown', 'value')\n",
+    ")\n",
+    "def update_output(value):\n",
+    "    return plot().histogram(data, value).to_html()\n",
+    "    # return f'You have selected {value}'\n",
+    "\n",
+    "# def shutdown():\n",
+    "#   func = request.environ.get('werkzeug.server.shutdown')\n",
+    "#   if func is None:\n",
+    "#     raise RuntimeError('Not running with the Werkzeug Server')\n",
+    "#   func()\n",
+    "\n",
+    "\n",
+    "# shutdown()\n",
+    "app.run_server(port=9009, debug=True)\n"
    ]
   }
  ],
